ingress/traefik-ingress/traefik-ingress-controller-sa-deploy.yaml
---
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: siang
#  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
#        name: traefik-ingress-lb
    spec:
      hostNetwork: true
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: 172.16.101.70/nginx-ingress/traefik:20180702
        name: traefik-ingress-lb
        resources:
          limits:
            cpu: 200m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
        ports:
        - containerPort: 80
          hostPort: 80
        - containerPort: 8888
        args:
        - --web
        - --web.address=:8888
        - --kubernetes
        - --logLevel=DEBUG
#      nodeSelector:
#        k8s-app: traefik-ingress-lb
